--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,29 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Dosis:400,600');
+
+* {
+  box-sizing: border-box;
+  outline: none;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: #1e1e1e;
+  font-family: 'Dosis', sans-serif;
+  font-size: 18px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button {
+  font-family: inherit;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 15px;
   }
-  to {
-    transform: rotate(360deg);
+  .board {
+    width: 100%;
+  }
+  .flip-box {
+    width: 20vw;
+    height: 20vw;
   }
 }
